--- a/lang/wp2wb-zh_CN.po
+++ b/lang/wp2wb-zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Ryan\n"
 "POT-Creation-Date: 2017-12-12 22:32+0800\n"
-"PO-Revision-Date: 2017-12-12 23:03+0800\n"
+"PO-Revision-Date: 2017-12-13 10:16+0800\n"
 "Last-Translator: \n"
 "Language-Team: 85ryan.blue@gmail.com\n"
 "Language: zh_CN\n"
@@ -62,7 +62,7 @@ msgid ""
 msgstr ""
 "<strong style=\"color:red;\">第一步：</strong> 请输入您的新浪 <strong>APP "
 "Key</strong> 和 <strong>APP Secret</strong>，完成后点击保存按钮提交！你可以"
-"到 <strong><a href=\"%s\">新浪开放平台</a></strong> 去 APP Key 和 APP "
+"到 <strong><a href=\"%s\">新浪开放平台</a></strong> 去申请 APP Key 和 APP "
 "Secret。"
 
 #: wp2wb.php:178
