--- a/lang/wp2wb-zh_CN.po
+++ b/lang/wp2wb-zh_CN.po
@@ -2,15 +2,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Ryan\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/wp2wb\n"
-"POT-Creation-Date: 2018-04-05 12:36+0800\n"
-"PO-Revision-Date: 2018-04-05 12:37+0800\n"
+"POT-Creation-Date: 2019-02-22 20:40+0800\n"
+"PO-Revision-Date: 2019-02-22 20:44+0800\n"
 "Last-Translator: \n"
 "Language-Team: 85ryan.blue@gmail.com\n"
 "Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.2.1\n"
 "X-Poedit-Basepath: ..\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
 "X-Poedit-KeywordsList: __;_e\n"
@@ -24,15 +24,20 @@ msgstr " 不要发布到微博"
 msgid "Sync Setting"
 msgstr "同步微博设置"
 
-#: sync.php:50 sync.php:131
+#: sync.php:50
 #, php-format
-msgid "I just published a new article:  %1$s, click here for details: %2$s."
-msgstr "我刚刚发布了新文章：《%1$s》，快来看看吧。详细内容请点击： %2$s"
+msgid "Post Updated:  %1$s, click here for details: %2$s."
+msgstr "文章更新：《%1$s》，快来看看吧。详细内容请点击： %2$s"
 
 #: sync.php:81 sync.php:162
 #, php-format
 msgid "<p>Click here for details: <a href=\"%1$s\">%2$s</a>.</p>"
 msgstr "<p>原文链接：<a href=\"%1$s\">%2$s</a></p>"
+
+#: sync.php:131
+#, php-format
+msgid "I just published a new article:  %1$s, click here for details: %2$s."
+msgstr "我刚刚发布了新文章：《%1$s》，快来看看吧。详细内容请点击： %2$s"
 
 #: wp2wb.php:54 wp2wb.php:55
 msgid "Sync to Weibo"
